# cibersecurity-desafio-ransomware

./: decrypter.py  encrypter.py  pyproject.toml
