[project]
name = "cibersecurity-desafio-ransomware"
version = "0.1.0"
description = ""
authors = [
    {name = "V1nic1us",email = "marcusvinicius.mds16@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyaes (>=1.6.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
